[project]
  name = "pulumi_libvirt"
  description = "A Pulumi provider dynamically bridged from libvirt."
  dependencies = ["parver>=0.2.1", "pulumi>=3.165.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11,<5; python_version < \"3.11\""]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "0.9.1"
  [project.urls]
    Repository = "https://github.com/dmacvicar/terraform-provider-libvirt"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_libvirt = ["py.typed", "pulumi-plugin.json"]
